# git-example-package

./: pyproject.toml
.github/workflows/: python-publish.yml
